[tool.poetry]
name = "ant"
version = "0.1.0"
description = ""
authors = ["XiaoqianXiao <xiao.xiaoqian.320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
h5py = '3.11.0'
tables = "3.9.2"
psychopy = "^2023"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
